# GTS-cpp

./: .gitignore  CMakeLists.txt  README.md
OfficialDemo/include/: WDFiles.h  WaveDemo.h
OfficialDemo/src/: WDFiles.c  WDconfig.c  WaveDemo.c
html/: control.html  exp.html  index.html
html/js/: configSection.html
include/: CAENComm.h  CAENVMElib.h  OphirLMMeasurement.h  mongoose.c  mongoose.h
install/: initialConfig.json
raspberryPi/: i2c-tools_4.2-1+b1_arm64.deb  libi2c-dev_4.2-1+b1_arm64.deb  listener.cpp  readme
sandbox/: test1.cpp
src/: DB.cpp  DB.h  Kapellmeister.cpp  Kapellmeister.h  RequestHandler.cpp  RequestHandler.h  Stoppable.h  server.cpp
src/Caen/: AllBoards.cpp  AllBoards.h  Link.cpp  Link.h  test.cpp
src/Diagnostics/: Diagnostics.cpp  Diagnostics.h  Storage.cpp  Storage.h
src/Ophir/: Ophir.cpp  Ophir.h  OphirLMMeasurement.h  debug.cpp
src/Slow/: AllSlow.cpp  AllSlow.h  Slow.cpp  Slow.h
src/T15/: t15_python.cpp  t15_python.h
src/laser330/: Chatter.cpp  Chatter.h  Control.cpp  Control.h  Coolant.cpp  Coolant.h  Laser330.cpp  Laser330.h  oldMain
src/test/: exampleRaw.cpp  testUDP.cpp  timeMeasure.cpp
src/utils/: resetAffinity.cpp  setAffinity.cpp
utils/: GenTrigger.py  msgpk_debug.py  msgpk_view.py  sendUDP.py  viewer.py
